finish kafka